// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonPillFixedWidthContent /> snapshot should match snapshot 1`] = `
<ButtonPillFixedWidthContent
  buttonPillSize={40}
  includeIcon={true}
  stringContentVariations={
    Array [
      "long",
      "longer",
      "longest",
    ]
  }
>
  <div
    className="md-button-pill-fixed-width-content-wrapper"
  >
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={true}
      data-size={40}
      key="long"
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          long
        </h3>
      </Text>
    </div>
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={true}
      data-size={40}
      key="longer"
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          longer
        </h3>
      </Text>
    </div>
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={true}
      data-size={40}
      key="longest"
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          longest
        </h3>
      </Text>
    </div>
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={false}
      data-size={40}
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text>
        <p
          className="md-text-wrapper"
          data-type="body-primary"
        >
          Example
        </p>
      </Text>
    </div>
  </div>
</ButtonPillFixedWidthContent>
`;

exports[`<ButtonPillFixedWidthContent /> snapshot should match snapshot with buttonPillSize 1`] = `
<ButtonPillFixedWidthContent
  buttonPillSize={24}
  includeIcon={true}
  stringContentVariations={
    Array [
      "long",
      "longer",
      "longest",
    ]
  }
>
  <div
    className="md-button-pill-fixed-width-content-wrapper"
  >
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={true}
      data-size={24}
      key="long"
    >
      <Icon
        name="placeholder"
        scale={16}
      />
      <Text
        type="body-compact"
      >
        <small
          className="md-text-wrapper"
          data-type="body-compact"
        >
          long
        </small>
      </Text>
    </div>
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={true}
      data-size={24}
      key="longer"
    >
      <Icon
        name="placeholder"
        scale={16}
      />
      <Text
        type="body-compact"
      >
        <small
          className="md-text-wrapper"
          data-type="body-compact"
        >
          longer
        </small>
      </Text>
    </div>
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={true}
      data-size={24}
      key="longest"
    >
      <Icon
        name="placeholder"
        scale={16}
      />
      <Text
        type="body-compact"
      >
        <small
          className="md-text-wrapper"
          data-type="body-compact"
        >
          longest
        </small>
      </Text>
    </div>
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={false}
      data-size={24}
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text>
        <p
          className="md-text-wrapper"
          data-type="body-primary"
        >
          Example
        </p>
      </Text>
    </div>
  </div>
</ButtonPillFixedWidthContent>
`;

exports[`<ButtonPillFixedWidthContent /> snapshot should match snapshot with className 1`] = `
<ButtonPillFixedWidthContent
  buttonPillSize={40}
  className="example-class"
  includeIcon={true}
  stringContentVariations={
    Array [
      "long",
      "longer",
      "longest",
    ]
  }
>
  <div
    className="md-button-pill-fixed-width-content-wrapper"
  >
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={true}
      data-size={40}
      key="long"
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          long
        </h3>
      </Text>
    </div>
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={true}
      data-size={40}
      key="longer"
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          longer
        </h3>
      </Text>
    </div>
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={true}
      data-size={40}
      key="longest"
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          longest
        </h3>
      </Text>
    </div>
    <div
      className="example-class md-button-pill-fixed-width-content-button-content"
      data-hidden={false}
      data-size={40}
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text>
        <p
          className="md-text-wrapper"
          data-type="body-primary"
        >
          Example
        </p>
      </Text>
    </div>
  </div>
</ButtonPillFixedWidthContent>
`;

exports[`<ButtonPillFixedWidthContent /> snapshot should match snapshot with icon 1`] = `
<ButtonPillFixedWidthContent
  buttonPillSize={40}
  includeIcon={true}
  stringContentVariations={
    Array [
      "long",
      "longer",
      "longest",
    ]
  }
>
  <div
    className="md-button-pill-fixed-width-content-wrapper"
  >
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={true}
      data-size={40}
      key="long"
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          long
        </h3>
      </Text>
    </div>
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={true}
      data-size={40}
      key="longer"
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          longer
        </h3>
      </Text>
    </div>
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={true}
      data-size={40}
      key="longest"
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          longest
        </h3>
      </Text>
    </div>
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={false}
      data-size={40}
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text>
        <p
          className="md-text-wrapper"
          data-type="body-primary"
        >
          Example
        </p>
      </Text>
    </div>
  </div>
</ButtonPillFixedWidthContent>
`;

exports[`<ButtonPillFixedWidthContent /> snapshot should match snapshot with stringContentVariations 1`] = `
<ButtonPillFixedWidthContent
  buttonPillSize={40}
  includeIcon={true}
  stringContentVariations={
    Array [
      "test",
      "testing",
    ]
  }
>
  <div
    className="md-button-pill-fixed-width-content-wrapper"
  >
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={true}
      data-size={40}
      key="test"
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          test
        </h3>
      </Text>
    </div>
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={true}
      data-size={40}
      key="testing"
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text
        type="subheader-primary"
      >
        <h3
          className="md-text-wrapper"
          data-type="subheader-primary"
        >
          testing
        </h3>
      </Text>
    </div>
    <div
      className="md-button-pill-fixed-width-content-button-content"
      data-hidden={false}
      data-size={40}
    >
      <Icon
        name="placeholder"
        scale={20}
      />
      <Text>
        <p
          className="md-text-wrapper"
          data-type="body-primary"
        >
          Example
        </p>
      </Text>
    </div>
  </div>
</ButtonPillFixedWidthContent>
`;
